--- a/Index.html
+++ b/Index.html
@@ -69,7 +69,7 @@
         <div class="chat-left">
             <h2>Chat Support</h2>
             <p>At SHMK Learning, we provide AI-powered chat support to ensure a smooth and interactive learning experience. 🚀 Our smart AI assistant is available 24/7 to answer your queries, provide instant solutions, and guide you through your courses. 💡 Whether you need help with .NET development, coding doubts, or general learning assistance, our chat support makes learning faster and more efficient. 📚✨ Get real-time assistance and never feel stuck again—because learning should be seamless and hassle-free! 🔥🚀</p>
-            <a href="Chat Suppor.html" class="btn">Start Now</a>
+            <a href="Chat Suppor.html" class="btn" target="_blank">Start Now</a>
         </div>
 
         <!-- Right Side: Image -->
